testdata/test/resources/com/yafred/asn1/test/should-fail/integer_named_number_not_integer.asn
-- FAIL duplicate id

Module DEFINITIONS ::= BEGIN


My-integer ::= INTEGER { un (1), deux (2), trois (a) }

a REAL ::= 3

END